# Anki-deck-generator

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: entry.rs  japanese.rs  lib.rs
src/lib/anki/: anki_connect.rs  anki_note.rs  mod.rs
src/lib/dict/: dict_parser.rs  mod.rs
src/lib/dict/jitendex/: jitendex_entry.rs  jitendex_word.rs  mod.rs  test_data.json
src/lib/dict/jmnedict/: jmnedict_entry.rs  jmnedict_frequency.rs  jmnedict_word.rs  mod.rs  test_data.json
src/lib/dict/kanjidic/: kanjidic_kanji.rs  mod.rs  test_data.json
src/lib/tatoeba/: mod.rs  tatoeba_search.rs  tatoeba_search_old.rs  test_data.json  test_data_old.json
