[package]
name = "anki_deck_generator"
version = "0.1.0"
edition = "2021"

[lib]
name = "anki_utill"
path = "src/lib/lib.rs"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
zip = "2.2.2"
